[gd_scene load_steps=4 format=3 uid="uid://ppjha2gmeypa"]

[ext_resource type="Script" path="res://Scripts/World/army_form.gd" id="1_t5y27"]
[ext_resource type="Texture2D" uid="uid://bkcv8ipw5vgsc" path="res://Art/battle_map/red_player_spawn.png" id="2_n0tp8"]
[ext_resource type="Texture2D" uid="uid://bul31ap566nua" path="res://Art/world_heroes/elf_druid.png" id="3_dockw"]

[node name="ArmyForm" type="Node2D"]
script = ExtResource("1_t5y27")

[node name="sprite_color" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.235294)
texture = ExtResource("2_n0tp8")

[node name="sprite_unit" type="Sprite2D" parent="."]
texture = ExtResource("3_dockw")

[node name="DescriptionLabel" type="Label" parent="."]
offset_left = -242.0
offset_top = 38.0
offset_right = -109.0
offset_bottom = 93.0
text = "Bogumi≈Ç
Level 1"

[node name="MoveLabel" type="Label" parent="."]
offset_left = 23.0
offset_top = 6.0
offset_right = 265.0
offset_bottom = 118.0
text = "Move 3"
horizontal_alignment = 2
